# crutches

./: README.md
program/tsoy_d_a/: CMakeLists.txt  tsoy_d_a.sln
program/tsoy_d_a/StackR/: CMakeLists.txt  stackR.cpp  stackR.h  stackR_test.cpp
program/tsoy_d_a/array/: CMakeLists.txt  array.cpp  array.h  array_test.cpp
program/tsoy_d_a/comlex/: CMakeLists.txt  complex.cpp  complex.h  complex_test.cpp  rational.cpp  rational.h
program/tsoy_d_a/complex/: CMakeLists.txt  complex.cpp  complex.h  complex.vcxproj  complex_test.cpp
program/tsoy_d_a/matrixR/: CMakeLists.txt  matrixR.cpp  matrixR.h  matrixR_test.cpp
program/tsoy_d_a/matrixU/: CMakeLists.txt  matrixU.cpp  matrixU.h  matrixU_test.cpp
program/tsoy_d_a/matrixr/: matrixr.cpp  matrixr.h  matrixr_test.cpp
program/tsoy_d_a/matrixu/: CMakeLists.txt  matrixu_test.cpp
program/tsoy_d_a/priorityQueueL/: CMakeLists.txt  priorityQueueL.cpp  priorityQueueL_test.cpp
program/tsoy_d_a/priorityQueueR/: CMakeLists.txt
program/tsoy_d_a/priorityqueuel/: CMakeLists.txt  priorityqueuel.h  priorityqueuel_test.cpp
program/tsoy_d_a/priorityqueuer/: CMakeLists.txt
program/tsoy_d_a/prj_complex/: CMakeLists.txt
program/tsoy_d_a/prj_rational/: CMakeLists.txt
program/tsoy_d_a/rational/: CMakeLists.txt  ration.h  ration_test.cpp  rational.cpp  rational.h  rational.vcxproj  rational_test.cpp
program/tsoy_d_a/rect2d/: CMakeLists.txt  rect2d.cpp  rect2d.h  rect2d_test.cpp
program/tsoy_d_a/stackL/: CMakeLists.txt  stackL.cpp  stackL.h  stackL_test.cpp
program/tsoy_d_a/stackl/: CMakeLists.txt  stackl.cpp  (+1 more)
(+46 files in other folders)
