PROJECT( tsoy_d_a )

ADD_SUBDIRECTORY( complex )
ADD_SUBDIRECTORY( rational )
ADD_SUBDIRECTORY( vec3d )
ADD_SUBDIRECTORY( vec3dt )
ADD_SUBDIRECTORY( rect2d )
ADD_SUBDIRECTORY( array )
ADD_SUBDIRECTORY( matrixr )
ADD_SUBDIRECTORY( matrixu )
ADD_SUBDIRECTORY( stackl )
ADD_SUBDIRECTORY( priorityqueuel )
ADD_SUBDIRECTORY( stackr )
ADD_SUBDIRECTORY( priorityqueuer )
ADD_SUBDIRECTORY ( stacklis )